# format

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md
include/format/: concept.hpp  detail.hpp  exception.hpp  format.hpp  formatter.hpp  param.hpp  print.hpp  specifier.hpp
src/: main.cc
